--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.3",
     "morgan": "^1.9.1",
+    "ng-starrating": "^1.0.20",
     "nodemon": "^2.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
